--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <title>The Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="/public/normilize.css" rel="stylesheet">
-  <link href="/public/style.css" rel="stylesheet">
+  <link href="/normilize.css" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet">
 </head>
 
 <body>
